update on new york address

--- a/single/index.html
+++ b/single/index.html
@@ -172,6 +172,8 @@
               3B, Tiamiyu Savage Street <br />Victoria Island, Lagos
               <br />Nigeria
             </p>
+            <p>1250 Broadway, 36th Floor, New York, NY 10001</p>
+
             <p>+234 901 415 0103</p>
             <p>
               <a href="mailto:info@rensource.energy">info@rensource.energy</a>
