--- a/contact/index.html
+++ b/contact/index.html
@@ -267,6 +267,7 @@
               3B, Tiamiyu Savage Street <br />Victoria Island, Lagos
               <br />Nigeria
             <br/>+234 901 415 0103</p>
+            <p>1250 Broadway, 36th Floor, New York, NY 10001</p>
             <p>
               <a href="mailto:info@rensource.energy">info@rensource.energy</a>
             </p>
