--- a/leadership/index.html
+++ b/leadership/index.html
@@ -486,6 +486,7 @@
                     </h3>
                     <p>3B, Tiamiyu Savage Street <br>Victoria Island, Lagos <br>Nigeria</p>
                     <p>+234 901 415 0103</p>
+                    <p>1250 Broadway, 36th Floor, New York, NY 10001</p>
                     <p><a href="mailto:info@rensource.energy">info@rensource.energy</a></p>
                 </div>
                 <div class="col-lg-6 text-center text-lg-left order-1 order-xs-2 d-flex"
