updates on footer

--- a/index.html
+++ b/index.html
@@ -504,8 +504,6 @@
                                 </defs>
                             </svg>
                         </span>
-
-
                         <svg width="129" height="16" viewBox="0 0 129 16" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -514,10 +512,18 @@
                         </svg>
                         <span class="d-none">Rensource</span>
                     </h3>
-                    <p>3B, Tiamiyu Savage Street <br>Victoria Island, Lagos <br>Nigeria</p>
-                    <p>+234 901 415 0103</p>
-                    <p>1250 Broadway, 36th Floor, New York, NY 10001</p>
-                    <p><a href="mailto:info@rensource.energy">info@rensource.energy</a></p>
+                   <div class="row">
+                          <div class="col-lg-12">
+                              <b style="color: #fff">Lagos</b><br/>
+                              <p>3B, Tiamiyu Savage Street <br>Victoria Island, Lagos <br>Nigeria<br/>
+                              +234 901 415 0103<br/>
+                              <a href="mailto:info@rensource.energy">info@rensource.energy</a></p>
+                          </div>
+                          <div class="col-lg-12">
+                              <b style="color: #fff">New York</b><br/>
+                              <p>1250 Broadway, 36th Floor, New York, NY 10001</p>
+                          </div>
+                   </div>
                 </div>
                 <div class="col-lg-6 text-center text-lg-left order-1 order-xs-2 d-flex"
                     style="flex-direction: column; align-items: center">
