update on footer

--- a/index.html
+++ b/index.html
@@ -515,9 +515,8 @@
                    <div class="row">
                           <div class="col-lg-12">
                               <b style="color: #fff">Lagos</b><br/>
-                              <p>3B, Tiamiyu Savage Street <br>Victoria Island, Lagos <br>Nigeria<br/>
-                              +234 901 415 0103<br/>
-                              <a href="mailto:info@rensource.energy">info@rensource.energy</a></p>
+                              <p>3B, Tiamiyu Savage Street <br>Victoria Island, Lagos <br>Nigeria
+
                           </div>
                           <div class="col-lg-12">
                               <b style="color: #fff">New York</b><br/>
@@ -527,24 +526,6 @@
                 </div>
                 <div class="col-lg-6 text-center text-lg-left order-1 order-xs-2 d-flex"
                     style="flex-direction: column; align-items: center">
-                    <h3 class="footer-h">Company</h3>
-                    <nav class="">
-                        <ul id="menu-footer" class="nav nav-footer flex-column">
-                            <li class="">
-                                <a href="/#tech-driven-section" class="">About Us</a>
-                            </li>
-                            <li class="">
-                                <a href="/leadership/index.html" class="">
-                                    Our Team
-                                </a>
-                            </li>
-                            <!-- <li class="">
-                                <a href="/careers/index.html" class="">
-                                    Careers
-                                </a>
-                            </li> -->
-                        </ul>
-                    </nav>
                     <p class="show-xs mt-2">©2020 Rensource Inc. All Rights Reserved.</p>
                 </div>
                 <span id="toTop" class="toTop" onclick="window.scrollTo({top: 0,left: 0,behavior: 'smooth'})">
@@ -552,7 +533,10 @@
                 </span>
                 <div class="col-lg-8 d-flex text-center text-lg-left order-3" style="flex-direction: column;">
                     <div>
-                        <h3 class="footer-h">Also connect with us on social media</h3>
+                        <h3 class="footer-h">&nbsp;</h3>
+                        <b style="color: #fff">Contact us</b><br/>
+                        +234 901 415 0103<br/>
+                        <a href="mailto:info@rensource.energy">info@rensource.energy</a></p>
                         <p style="display: inline-block;">
                             <a href="https://facebook.com/rensource" target="_blank" class="p-1">
                                 <span class="social facebook duo">Facebook</span>
