update on the contact page

--- a/contact/index.html
+++ b/contact/index.html
@@ -131,7 +131,7 @@
                 <h1>
                 </h1>
                 <p>
-                  Rensource Distributed Energy Limited<br />
+                  Rensource Limited<br />
                   3B, Tiamiyu Savage Street<br />
                   Victoria Island, Lagos<br />
                   Nigeria<br />
