--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                 <span id="toTop" class="toTop" onclick="window.scrollTo({top: 0,left: 0,behavior: 'smooth'})">
                     <img src="/images/toTop.svg" class="img-fluid">
                 </span>
-                <div class="col-lg-8 d-flex text-center text-lg-left order-3" style="flex-direction: column;">
+                <div class="col-lg-8 d-flex text-center text-lg-right order-3" style="flex-direction: column;">
                     <div>
                         <h3 class="footer-h">&nbsp;</h3>
                         <b style="color: #fff">Contact us</b><br/>
@@ -539,19 +539,19 @@
                         <a href="mailto:info@rensource.energy">info@rensource.energy</a></p>
                         <p style="display: inline-block;">
                             <a href="https://facebook.com/rensource" target="_blank" class="p-1">
-                                <span class="social facebook duo">Facebook</span>
+                                <span class="social facebook duo"></span>
                             </a>
                             <a href="https://twitter.com/rensourceenergy" target="_blank" class="p-1">
-                                <span class="social twitter duo">Twitter</span>
+                                <span class="social twitter duo"></span>
                             </a>
                             <a href="https://www.instagram.com/rensource" target="_blank" class="p-1">
-                                <span class="social instagram duo">Instagram</span>
+                                <span class="social instagram duo"></span>
                             </a>
                             <a href="https://www.linkedin.com/company/rensource-energy/" target="_blank" class="p-1">
-                                <span class="social linkedin duo">LinkedIn</span>
+                                <span class="social linkedin duo"></span>
                             </a><a href="https://www.youtube.com/channel/UCJQkNRevEvx0LolNKXNZlew" target="_blank"
                                 class="p-1">
-                                <span class="social youtube duo">Youtube</span>
+                                <span class="social youtube duo"></span>
                             </a>
                         </p>
                     </div>
