--- a/contact/index.html
+++ b/contact/index.html
@@ -101,7 +101,7 @@
               <h1>
               </h1>
               <p>
-                Rensource Inc Limited<br />
+                Rensource Inc.<br />
                 3B, Tiamiyu Savage Street<br />
                 Victoria Island, Lagos<br />
                 Nigeria<br />
