--- a/leadership/index.html
+++ b/leadership/index.html
@@ -97,6 +97,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/contact/index.html">Contact Us</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://donations.merchlist.co/">Donate to support Nigerians through the COVID-19 Outbreack</a>
+                          </li>
                     </ul>
                 </div>
             </div>
