--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <a class="nav-link" href="/contact/index.html">Contact Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://donations.merchlist.co/">Donate to support Nigerians through the COVID-19 Outbreack</a>
+                            <a class="nav-link" href="https://donations.merchlist.co/" target="_blank">Donate to support Nigerians through the COVID-19 Outbreack</a>
                           </li>
                     </ul>
                 </div>
