--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                </path>
              </svg> 
              <a href="https://donations.merchlist.co/" target="_blank"
-               style="text-decoration: none; color: rgb(89, 134, 193); font-weight: 300; font-size: 19px;"
+               style="text-decoration: none; color: rgb(89, 134, 193); font-weight: 300; font-size: 19px; padding-left: 10px"
                class="align-self-center"
                >Donate to support Nigerians through the COVID-19
                Outbreak</a>
