--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                style="text-decoration: none; color: rgb(89, 134, 193); font-weight: 300; font-size: 19px; padding-left: 10px"
                class="align-self-center"
                >Donate to support Nigerians through the COVID-19
-               Outbreak</a>
+               outbreak</a>
            </div>
         <nav class="bg-white">
             <div class="container clearfix" style="display: none">
