--- a/contact/index.html
+++ b/contact/index.html
@@ -47,7 +47,7 @@
         style="text-decoration: none; color: rgb(89, 134, 193); font-weight: 300; font-size: 19px;"
         class="align-self-center"
         >Donate to support Nigerians through the COVID-19
-        Outbreack</a>
+        Outbreak</a>
     </div>
     <nav class="navbar navbar-expand-md navbar-light bg-yellow">
       <div class="container">
